added the user's role to the authorities so SpringSecurity recognizes it